# google-chat-tauri

./: .gitignore  .prototools  .release-please-manifest.json  CHANGELOG.md  CLAUDE.md  README.md  biome.json  index.html  lefthook.yml  package.json  pnpm-lock.yaml  release-please-config.json  tsconfig.json  vite.config.injection.ts  vite.config.ts  vitest.config.ts
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
.lefthook/: commit-msg.sh
frontend/: index.html  main.ts
injection/: auth-popup-redirect.ts  custom-css.ts  error-capture.ts  favicon-observer.ts  focus-mode.ts  heartbeat.ts  main.ts  menu-toggle.ts  notification-activation.ts  notification-patch.ts  search-focus.ts  spellcheck.ts  unread-counter.ts  zoom.ts
injection/__tests__/: custom-css.test.ts  debounce.test.ts  favicon-observer.test.ts  logger.test.ts  notification-activation.test.ts  notification-patch.test.ts  search-focus.test.ts  unread-counter.test.ts  zoom.test.ts
injection/lib/: debounce.ts  logger.ts
scripts/: generate-app-icon.ps1  generate-icons.js  generate-tray-icons.ps1
src/: App.svelte  app.css  main.ts
src-tauri/: CHANGELOG.md  Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json  remote.json
src-tauri/icons/: icon.icns
src-tauri/permissions/: local-ui-ipc.toml  remote-ipc.toml
src-tauri/src/: main.rs
src-tauri/src/features/: autostart.rs  badge.rs  config.rs  crash_report.rs  debug_info.rs  external_links.rs  focus_mode.rs  injection_log.rs  menu.rs  mod.rs  notifications.rs  online.rs  shortcuts.rs  taskbar.rs  theme.rs  tray.rs  updater.rs  user_agent.rs  watchdog.rs  window.rs  windows.rs  zoom.rs
src/lib/: ipc.ts
src/lib/components/: Toggle.svelte
src/lib/components/__tests__/: Toggle.test.ts
src/lib/stores/: settings.ts
src/lib/stores/__tests__/: settings.test.ts
src/views/: About.svelte  Offline.svelte  Settings.svelte  Shortcuts.svelte
src/views/__tests__/: About.test.ts  Offline.test.ts  Settings.test.ts  Shortcuts.test.ts
