[package]
name = "google-chat-tauri"
version = "0.0.1"
edition = "2021"
license = "MIT"
description = "Tauri reimplementation of Google Chat desktop client for Windows"

[build-dependencies]
tauri-build = { version = "2", features = [] }
ureq = { version = "2", default-features = false, features = ["tls", "json"] }
serde_json = "1"
chrono = { version = "0.4", default-features = false, features = ["clock"] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
