[package]
name = "google-chat-tauri"
version = "0.2.0"
edition = "2021"
license = "MIT"
description = "Tauri reimplementation of Google Chat desktop client for Windows"

[build-dependencies]
tauri-build = { version = "2", features = [] }
ureq = { version = "2", default-features = false, features = ["tls", "json"] }
serde_json = "1"
chrono = { version = "0.4", default-features = false, features = ["clock"] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-ico", "image-png", "devtools"] }
tauri-plugin-single-instance = "2"
tauri-plugin-autostart = "2"
tauri-plugin-store = "2"
tauri-plugin-window-state = "2"
tauri-plugin-notification = "2"
tauri-plugin-shell = "2"
tauri-plugin-log = "2"
tauri-plugin-dialog = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-opener = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tauri-plugin-clipboard-manager = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
tokio = { version = "1", features = ["full"] }
url = "2"

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
mockito = "1"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = ["Win32_UI_Shell"] }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
